[feat] Request model and swagger generated
