# docs/swagger.json
@@ -18,7 +18,7 @@
         },
         "version": "1.0"
     },
-    "host": "localhost:8081",
+    "host": "localhost:9010",
     "paths": {
         "/audio/dub": {
             "post": {
@@ -80,15 +80,213 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/TaskPool.TaskStatus"
                         }
+                    }
+                }
+            }
+        },
+        "/profile/add_money": {
+            "post": {
+                "description": "Adds a new transaction record to the transaction table, and you will get the final credits of user's account",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Create AddMoney"
+                ],
+                "summary": "Adds a new transaction record to the transaction table",
+                "parameters": [
+                    {
+                        "description": "request body",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/add_money.AddReqModel"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/profile/create": {
+            "post": {
+                "description": "Adds a new user where the primary key will be the gmail id and profile id will be given in response",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Create Profile"
+                ],
+                "summary": "create a profile for the user using google auth",
+                "parameters": [
+                    {
+                        "description": "request body",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/create_profile.CreateReqModel"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/profile/deduct_money": {
+            "post": {
+                "description": "-ve credits are not yet handled",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Delete CutMoneyService"
+                ],
+                "summary": "deduct x amount of money from user's account",
+                "parameters": [
+                    {
+                        "description": "request body",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/TaskPool.DeductRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/profile/txn_history": {
+            "get": {
+                "description": "lazy loading can be added, to implement that pagination on BE will be required",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Get TxnHistory"
+                ],
+                "summary": "get a list of all the txns that the user did",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "rajatn@gmail.com",
+                        "name": "email",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
                     }
                 }
             }
         }
     },
     "definitions": {
+        "TaskPool.DeductRequest": {
+            "type": "object",
+            "properties": {
+                "cost": {
+                    "type": "number"
+                },
+                "email_id": {
+                    "type": "string"
+                },
+                "euid": {
+                    "type": "string"
+                },
+                "subtitle": {
+                    "type": "string"
+                },
+                "video": {
+                    "type": "string"
+                }
+            }
+        },
+        "TaskPool.TaskStatus": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string",
+                    "example": "There was an error"
+                },
+                "links": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "object",
+                        "additionalProperties": {
+                            "type": "string"
+                        }
+                    }
+                },
+                "processing_complete": {
+                    "type": "boolean",
+                    "example": false
+                }
+            }
+        },
+        "add_money.AddReqModel": {
+            "type": "object",
+            "properties": {
+                "credits": {
+                    "type": "integer",
+                    "example": 1000
+                },
+                "email": {
+                    "type": "string",
+                    "example": "rajatn@gmail.com"
+                }
+            }
+        },
+        "create_profile.CreateReqModel": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string",
+                    "example": "rajatn@gmail.com"
+                },
+                "initial_credits": {
+                    "description": "default value",
+                    "type": "integer",
+                    "example": 2100
+                },
+                "name": {
+                    "type": "string",
+                    "example": "Rajat Kumar"
+                },
+                "phone": {
+                    "type": "integer",
+                    "example": 8010201921
+                }
+            }
+        },
         "send_video.AudioRequest": {
             "type": "object",
             "required": [
@@ -99,17 +297,21 @@
             ],
             "properties": {
                 "audio_length": {
-                    "type": "number"
+                    "type": "number",
+                    "example": 10
                 },
                 "email": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "rajatn@gmail.com"
                 },
                 "file_link": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "https://www.emaple.com/file"
                 },
                 "language": {
                     "description": "TODO: Add support for dubbing multiple languages at the same time",
-                    "type": "string"
+                    "type": "string",
+                    "example": "hindi|telugu|marathi|bengali|tamil"
                 }
             }
         },
