# internal/profile/add_money/models.go
@@ -1,6 +1,6 @@
 package add_money
 
 type AddReqModel struct {
-	EmailId string `json:"email"`
-	Credits int32  `json:"credits"`
+	EmailId string `json:"email" example:"rajatn@gmail.com"`
+	Credits int32  `json:"credits" example:"1000"`
 }
