# internal/profile/create_profile/models.go
@@ -1,8 +1,8 @@
 package create_profile
 
 type CreateReqModel struct {
-	Name           string `json:"name"`
-	Email          string `json:"email"`
-	Phone          int64  `json:"phone,omitempty"`
-	InitialCredits int32  `json:"initial_credits,omitempty"` // default value
+	Name           string `json:"name" example:"Rajat Kumar"`
+	Email          string `json:"email" example:"rajatn@gmail.com"`
+	Phone          int64  `json:"phone,omitempty" example:"8010201921"`
+	InitialCredits int32  `json:"initial_credits,omitempty" example:"2100"` // default value
 }
